syntax = "proto3";

package ml_sandbox;

service MLSandboxService {
    rpc RunSimpleModel(RunSimpleModelRequest) returns (RunSimpleModelResponse) {}
}

message RunSimpleModelRequest {
}

message RunSimpleModelResponse {
}